2001-01-22  Lars Wirzenius  <liw@iki.fi>

	* gwlib/accesslog.c: Made the output buffer be allocated via
	dynamic memory to avoid overflowing the stack with large local
	variables.
	
	* gwlib/log.c: Made output buffer smaller, again because of stack
	limitations. The new limit is one kilobyte, but since it is used
	only for certain parts of the output (the prefix with dates etc,
	and the format string), it should be plenty.

2001-01-21  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/userguide.xml: Changed SMPP version to 3.4.
	
	* gw/smsc_smpp.h: Removed. I thought I had removed it earlier
	already.
	
	* test/fakewap.c: Fixed memory leaks.

2001-01-19  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: Added function set_charset to fix bug with 
	the character set read from the http-headers.

2001-01-18  Lars Wirzenius  <liw@iki.fi>

	* gwlib/octstr.[ch]: Renamed the horribly long name
	octstr_create_immutable to octstr_imm. This should make it a
	bit more palatable.

	* gw/html.c, gw/smsbox.c, gw/smsc_at.c, gw/smscconn.c,
	gw/urltrans.c, gw/wap-appl.c, gw/wap_push_ota.c,
	gw/wml_compiler.c, gwlib/cfg.c, gwlib/http.c, test/test_dict.c,
	test/test_headers.c, test/test_http_server.c,
	test/test_octstr_immutables.c, test/wml_tester.c,
	wap/wsp_headers.c, wap/wsp_strings.c: Related changes.

2001-01-18  Lars Wirzenius  <liw@iki.fi>

	* gwlib/cfg.[ch]: Wrote functions cfg_get_integer and cfg_get_list
	to allow easier access to non-octet-string variables. No explicit
	typing in cfg.def, though. That may come later.

2001-01-18  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_boxc.c: the current smsbox closes the connection properly,
	so wait until that before exiting with boxc_receiver, thus
	eliminating lost messages

	* gw/bb_boxc.c: added alive-check to boxc_sender after
	list_consume() as octstr_send does not notice that socket has been
	closed
	
2001-01-18  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c, gw/urltrans.[ch]: Converted to use cfg.c instead